# axolote-engine

./: .clang-format  .cz.toml  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  READMEpt.md  TODO.md  compile_commands.json  getting-started.md  install.md  install.sh  install_windows.ps1
MEPEC/: run.sh  run_light.sh  run_minecraft.sh
cmake/: config.cmake.in
docs/: building.md  getting-started.md  install.md
docs/diagrams/: class.planttext  diagram.planttext
docs/en/: getting-started.md  install.md
docs/pt-br/: building.md  getting-started.md  install.md
examples/: CMakeLists.txt  main.cpp  models_and_shaders.cpp  window.cpp
examples/project_example/: CMakeLists.txt  README.md
examples/project_example/src/: main.cpp
include/axolote/: RenderState.hpp  assimp.hpp  audio_engine.hpp  camera.hpp  camera_renderer.hpp  drawable.hpp  ebo.hpp  engine.hpp  entity.hpp  gmesh.hpp  gmodel.hpp  idrawable.hpp  instancing.hpp  light.hpp  mesh.hpp  model.hpp  namespace.hpp  namespace_axolote.hpp  object.hpp  object2d.hpp  object3d.hpp  scene.hpp  scene_context.hpp  scene_renderer.hpp  shader.hpp  skybox.hpp  structs.hpp  texture.hpp  utils.hpp  vao.hpp  vbo.hpp  window.hpp
include/axolote/gl/: cubemap.hpp  ebo.hpp  framebuffer.hpp  namespace_gl.hpp  opengl_object.hpp  shader.hpp  texture.hpp  ubo.hpp  vao.hpp  vbo.hpp
include/axolote/glad/: glad.h
include/axolote/shaders/: light_struct_ubo.hpp  namespace.hpp
include/axolote/utils/: grid.hpp  line.hpp  namespace_utils.hpp
resources/models/cube/: flash-cube.gltf
resources/models/dino/: Triceratops.mtl
resources/models/fish/: 13007_Blue-Green_Reef_Chromis_v2_l3.mtl
resources/models/m26/: m26pershing_coh.max  m26pershing_coh.mtl
resources/models/mine_cube/: cube.mtl
resources/models/saul-goodman/: model.mtl
resources/shaders/: def_fragment_shader.glsl  def_grid_fragment_shader.glsl  def_grid_vertex_shader.glsl  def_vertex_shader.glsl  fragment_shader.txt  gmesh_base_fragment_shader.glsl  gmesh_base_vertex_shader.glsl  grid_base_fragment_shader.glsl  grid_base_vertex_shader.glsl  object3d_base_fragment_shader.glsl  object3d_base_vertex_shader.glsl  post_processing_base_fragment_shader.glsl  post_processing_base_vertex_shader.glsl  vertex_shader.txt
scripts/: get_version.py
src/: .window.cpp.swp  assimp.cpp  audio_engine.cpp  camera.cpp  camera_renderer.cpp  ebo.cpp  entity.cpp  gmesh.cpp  gmodel.cpp  instancing.cpp  light.cpp  mesh.cpp  model.cpp  object2d.cpp  object3d.cpp  scene.cpp  scene_context.cpp  scene_renderer.cpp  shader.cpp  skybox.cpp  texture.cpp  utils.cpp  vao.cpp  vbo.cpp  window.cpp
src/gl/: cubemap.cpp  ebo.cpp  framebuffer.cpp  shader.cpp  texture.cpp  ubo.cpp  vao.cpp  vbo.cpp
src/glad/: glad.c
src/utils/: grid.cpp  line.cpp
tests/: light.cpp  main.cpp  mainold.cpp  minecraft.cpp  models_and_shaders.cpp  texs.cpp  window.cpp
tests/shaders/: crazy_post_processing_frag.glsl  instancing_vert_shader.glsl  screen_frag.glsl
